[package]
name = "cucumber"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@gmail.com>"]
build = "build.rs"

[build-dependencies]
serde_codegen = "*"
syntex = "*"
itertools = "*"

[dependencies]
regex = "*"
hyper = "*"
serde = "*"
serde_json = "*"

[[example]]
name = "calculator"
path = "./examples/calculator/features/cuke.rs"

[[example]]
name = "cuke"
path = "./features/cuke.rs"
